external form title change

--- a/.env.dev
+++ b/.env.dev
@@ -21,7 +21,7 @@ ALLOWED_HOSTS=
 DATABASE_USER=postgres
 DATABASE_PASSWORD=secret
 DATABASE_NAME=senspozitiv-db
-DATABASE_HOST=db
+DATABASE_HOST=db-senspozitiv
 DATABASE_PORT=5432
 
 EMAIL_HOST=
