--- a/sens_pozitiv/requirements-dev.txt
+++ b/sens_pozitiv/requirements-dev.txt
@@ -22,10 +22,6 @@ blessed==1.19.1
     # via
     #   -r requirements.txt
     #   django-q
-brotli==1.0.9
-    # via
-    #   -r requirements.txt
-    #   flask-compress
 certifi==2021.10.8
     # via
     #   -r requirements.txt
@@ -36,36 +32,8 @@ charset-normalizer==2.0.12
     #   requests
 click==8.0.4
     # via
-    #   -r requirements.txt
     #   black
-    #   flask
     #   pip-tools
-dash==1.20.0
-    # via
-    #   -r requirements.txt
-    #   dash-bootstrap-components
-    #   django-plotly-dash
-dash-bootstrap-components==0.13.0
-    # via -r requirements.txt
-dash-core-components==1.16.0
-    # via
-    #   -r requirements.txt
-    #   dash
-    #   django-plotly-dash
-dash-html-components==1.1.3
-    # via
-    #   -r requirements.txt
-    #   dash
-    #   django-plotly-dash
-dash-renderer==1.9.1
-    # via
-    #   -r requirements.txt
-    #   dash
-    #   django-plotly-dash
-dash-table==4.11.3
-    # via
-    #   -r requirements.txt
-    #   dash
 decorator==5.1.1
     # via ipython
 defusedxml==0.7.1
@@ -89,7 +57,6 @@ django==3.2.12
     #   django-multiselectfield
     #   django-phonenumber-field
     #   django-picklefield
-    #   django-plotly-dash
     #   django-q
     #   django-recaptcha
     #   django-storages
@@ -119,8 +86,6 @@ django-picklefield==3.0.1
     # via
     #   -r requirements.txt
     #   django-q
-django-plotly-dash==1.6.6
-    # via -r requirements.txt
 django-q==1.3.9
     # via
     #   -r requirements.txt
@@ -131,12 +96,6 @@ django-recaptcha==3.0.0
     # via -r requirements.txt
 django-storages==1.12.3
     # via -r requirements.txt
-dpd-components==0.1.0
-    # via
-    #   -r requirements.txt
-    #   django-plotly-dash
-dpd-static-support==0.0.5
-    # via -r requirements.txt
 et-xmlfile==1.1.0
     # via
     #   -r requirements.txt
@@ -145,20 +104,6 @@ executing==0.8.3
     # via stack-data
 fancycompleter==0.9.1
     # via pdbpp
-flask==2.0.3
-    # via
-    #   -r requirements.txt
-    #   dash
-    #   django-plotly-dash
-    #   flask-compress
-flask-compress==1.11
-    # via
-    #   -r requirements.txt
-    #   dash
-future==0.18.2
-    # via
-    #   -r requirements.txt
-    #   dash
 gevent==21.12.0
     # via -r requirements.txt
 greenlet==1.1.2
@@ -175,24 +120,12 @@ ipython==8.1.1
     # via -r requirements-dev.in
 isort==5.10.1
     # via -r requirements-dev.in
-itsdangerous==2.1.1
-    # via
-    #   -r requirements.txt
-    #   flask
 jedi==0.18.1
     # via ipython
-jinja2==3.0.3
-    # via
-    #   -r requirements.txt
-    #   flask
 markuppy==1.14
     # via
     #   -r requirements.txt
     #   tablib
-markupsafe==2.1.1
-    # via
-    #   -r requirements.txt
-    #   jinja2
 matplotlib-inline==0.1.3
     # via ipython
 mypy-extensions==0.4.3
@@ -231,11 +164,6 @@ pip-tools==6.5.1
     # via -r requirements-dev.in
 platformdirs==2.5.1
     # via black
-plotly==5.6.0
-    # via
-    #   -r requirements.txt
-    #   dash
-    #   django-plotly-dash
 prompt-toolkit==3.0.28
     # via ipython
 psycopg2==2.9.3
@@ -274,7 +202,6 @@ six==1.16.0
     # via
     #   -r requirements.txt
     #   blessed
-    #   plotly
     #   python-dateutil
 sqlparse==0.4.2
     # via
@@ -289,10 +216,6 @@ tablib[html,ods,xls,xlsx,yaml]==3.2.0
     # via
     #   -r requirements.txt
     #   django-import-export
-tenacity==8.0.1
-    # via
-    #   -r requirements.txt
-    #   plotly
 tomli==2.0.1
     # via
     #   black
@@ -313,10 +236,7 @@ wcwidth==0.2.5
     #   blessed
     #   prompt-toolkit
 werkzeug==2.0.3
-    # via
-    #   -r requirements-dev.in
-    #   -r requirements.txt
-    #   flask
+    # via -r requirements-dev.in
 wheel==0.37.1
     # via pip-tools
 whitenoise==6.0.0
