update recaptha type

--- a/.env.prod
+++ b/.env.prod
@@ -51,6 +51,6 @@ ENABLE_SLACK_LOGGING=yes
 SLACK_LOGGING_COLOR=1D49A7
 SLACK_WEBHOOK_URL=
 
-# google recaptcha v3
+# google recaptcha v2 checkbox
 RECAPTCHA_PUBLIC_KEY=
 RECAPTCHA_PRIVATE_KEY=
